Fix(#60): add different profiles for each cloud provider, rework naming schema ...

--- a/bibigrid-main/pom.xml
+++ b/bibigrid-main/pom.xml
@@ -4,44 +4,99 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>bibigrid</artifactId>
-        <groupId>com.github.bibiserv</groupId>
-        <version>development-SNAPSHOT</version>
+        <groupId>de.unibi.cebitec.bibigrid</groupId>
+        <version>2.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>bibigrid-main</artifactId>
+
+    <profiles>
+        <profile>
+            <id>default</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>de.unibi.cebitec.bibigrid</groupId>
+                    <artifactId>bibigrid-openstack</artifactId>
+                    <version>2.0</version>
+                </dependency>
+                <dependency>
+                    <groupId>de.unibi.cebitec.bibigrid</groupId>
+                    <artifactId>bibigrid-aws</artifactId>
+                    <version>2.0</version>
+                </dependency>
+                <dependency>
+                    <groupId>de.unibi.cebitec.bibigrid</groupId>
+                    <artifactId>bibigrid-azure</artifactId>
+                    <version>2.0</version>
+                </dependency>
+                <dependency>
+                    <groupId>de.unibi.cebitec.bibigrid</groupId>
+                    <artifactId>bibigrid-googlecloud</artifactId>
+                    <version>2.0</version>
+                </dependency>
+            </dependencies>
+        </profile>
+
+        <profile>
+            <id>openstack</id>
+            <dependencies>
+                <dependency>
+                    <groupId>de.unibi.cebitec.bibigrid</groupId>
+                    <artifactId>bibigrid-openstack</artifactId>
+                    <version>2.0</version>
+                </dependency>
+            </dependencies>
+        </profile>
+
+        <profile>
+            <id>aws</id>
+            <dependencies>
+                <dependency>
+                    <groupId>de.unibi.cebitec.bibigrid</groupId>
+                    <artifactId>bibigrid-aws</artifactId>
+                    <version>2.0</version>
+                </dependency>
+            </dependencies>
+        </profile>
+
+        <profile>
+            <id>azure</id>
+            <dependencies>
+                <dependency>
+                    <groupId>de.unibi.cebitec.bibigrid</groupId>
+                    <artifactId>bibigrid-azure</artifactId>
+                    <version>2.0</version>
+                </dependency>
+            </dependencies>
+        </profile>
+
+        <profile>
+            <id>googlecloud</id>
+            <dependencies>
+                <dependency>
+                    <groupId>de.unibi.cebitec.bibigrid</groupId>
+                    <artifactId>bibigrid-googlecloud</artifactId>
+                    <version>2.0</version>
+                </dependency>
+            </dependencies>
+        </profile>
+    </profiles>
 
     <dependencies>
         <!-- General -->
         <dependency>
             <groupId>com.github.BiBiServ.bibiserv</groupId>
             <artifactId>bibiservabstraction</artifactId>
-            <version>2.1.0.alpha.1</version>
+            <version>2.1.0</version>
         </dependency>
         <dependency>
-            <groupId>com.github.bibiserv</groupId>
+            <groupId>de.unibi.cebitec.bibigrid</groupId>
             <artifactId>bibigrid-core</artifactId>
-            <version>development-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.github.bibiserv</groupId>
-            <artifactId>bibigrid-googlecloud</artifactId>
-            <version>development-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.github.bibiserv</groupId>
-            <artifactId>bibigrid-openstack</artifactId>
-            <version>development-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.github.bibiserv</groupId>
-            <artifactId>bibigrid-aws</artifactId>
-            <version>development-SNAPSHOT</version>
-        </dependency>
-        <dependency>
-            <groupId>com.github.bibiserv</groupId>
-            <artifactId>bibigrid-azure</artifactId>
-            <version>development-SNAPSHOT</version>
+            <version>2.0</version>
         </dependency>
         <dependency>
             <groupId>commons-cli</groupId>
@@ -53,7 +108,6 @@
             <artifactId>slf4j-api</artifactId>
             <version>1.7.25</version>
         </dependency>
-
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
