--- a/bibigrid-aws/pom.xml
+++ b/bibigrid-aws/pom.xml
@@ -4,23 +4,24 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>bibigrid</artifactId>
-        <groupId>com.github.bibiserv</groupId>
-        <version>development-SNAPSHOT</version>
+        <groupId>de.unibi.cebitec.bibigrid</groupId>
+        <version>2.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>bibigrid-aws</artifactId>
 
+
     <dependencies>
         <dependency>
-            <groupId>com.github.bibiserv</groupId>
+            <groupId>de.unibi.cebitec.bibigrid</groupId>
             <artifactId>bibigrid-core</artifactId>
-            <version>development-SNAPSHOT</version>
+            <version>2.0</version>
         </dependency>
         <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-java-sdk-ec2</artifactId>
-            <version>1.10.67</version>
+            <version>LATEST</version>
         </dependency>
 
         <dependency>
