--- a/bibigrid-core/pom.xml
+++ b/bibigrid-core/pom.xml
@@ -5,18 +5,19 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <artifactId>bibigrid</artifactId>
-        <groupId>com.github.bibiserv</groupId>
-        <version>development-SNAPSHOT</version>
+        <groupId>de.unibi.cebitec.bibigrid</groupId>
+        <version>2.0</version>
     </parent>
 
     <artifactId>bibigrid-core</artifactId>
+
 
     <dependencies>
         <!-- General -->
         <dependency>
             <groupId>com.github.BiBiServ.bibiserv</groupId>
             <artifactId>bibiservabstraction</artifactId>
-            <version>2.1.0.alpha.1</version>
+            <version>2.1.0</version>
         </dependency>
         <dependency>
             <groupId>commons-codec</groupId>
