--- a/bibigrid-googlecloud/pom.xml
+++ b/bibigrid-googlecloud/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>bibigrid</artifactId>
-        <groupId>com.github.bibiserv</groupId>
-        <version>development-SNAPSHOT</version>
+        <groupId>de.unibi.cebitec.bibigrid</groupId>
+        <version>2.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -13,9 +13,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.github.bibiserv</groupId>
+            <groupId>de.unibi.cebitec.bibigrid</groupId>
             <artifactId>bibigrid-core</artifactId>
-            <version>development-SNAPSHOT</version>
+            <version>2.0</version>
         </dependency>
         <dependency>
             <groupId>com.google.cloud</groupId>
