--- a/bibigrid-googlecloud/pom.xml
+++ b/bibigrid-googlecloud/pom.xml
@@ -18,14 +18,9 @@
             <version>2.0</version>
         </dependency>
         <dependency>
-            <groupId>com.google.cloud</groupId>
-            <artifactId>google-cloud</artifactId>
-            <version>0.33.0-alpha</version>
-        </dependency>
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>22.0</version>
+            <groupId>com.google.apis</groupId>
+            <artifactId>google-api-services-compute</artifactId>
+            <version>v1-rev166-1.23.0</version>
         </dependency>
 
         <dependency>
